--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.JSInterop
 @using BlazorHyblid_ImageEditor
 @using BlazorHyblid_ImageEditor.Components
-@using AntDesign
+@using MudBlazor
